--- a/scripts/IPT-draft.html
+++ b/scripts/IPT-draft.html
@@ -203,7 +203,7 @@ Field instructor; IPT; Intern placement tracking; MSASS; Password reset; Passwor
     <li>Resolve ticket.</li>
   </ol>
 
-<a href="#survey">Questions Related to Evaluation Forms</a><br>
+<h3 id="survey">Questions Related to Evaluation Forms</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>If not completed, <a href="verification">verify user identity</a>.</li>
