--- a/scripts/IPT-draft.html
+++ b/scripts/IPT-draft.html
@@ -104,10 +104,7 @@ Field instructor; IPT; Intern placement tracking; MSASS; Password reset; Passwor
 <h3 id="resolver-groups">Resolver Groups</h3>
 
 <div class="well well-sm">
-<p>IPT is not supported by a resolver group. 
-<ul>
-  <li>If an issue it outside the scope of support the Service Desk provides, the user should be directed to contact his or her field advisor, and the ticket closed.</li>
-</p>
+<p>IPT is not supported by a resolver group. If an issue it outside the scope of support the Service Desk provides, the user should be directed to contact his or her field advisor, and the ticket closed.</p>
 </div>
 
 <h2 id="how-to-escalate">How to Escalate</h2>
