feedback from betas

--- a/guides/webex-jabber/webex_qrg_beta.html
+++ b/guides/webex-jabber/webex_qrg_beta.html
@@ -38,6 +38,7 @@ h3 { padding-top: 20px; }
 <h1>Cisco WebEx&trade;<br> 
 <small>Meeting Center</small></h1> 
 <p>Meeting Center allows Web-based conferencing in a collaborative session sharing audio, video, and the desktop. As many as 1,000 participants may attend online meetings by telephone, computer or using a mobile device.</p>
+<p>Note: You may be prompted to download a browser extension to use this application.</p>
 </div>
 
 <h2>Schedule a Meeting</h2>
