--- a/scripts/sympa_decom_announcement.html
+++ b/scripts/sympa_decom_announcement.html
@@ -5,7 +5,7 @@ cd ..
 <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Student Job Listings</title>
+  <title>Sympa Retire Announcement</title>
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
