--- a/scripts/sympa_decom_announcement.html
+++ b/scripts/sympa_decom_announcement.html
@@ -41,9 +41,10 @@ Groups; Google; Google groups; Mailing list; Email; Listserv; Sympa; Lists; List
 <p class="lead">The transition to the new product is ongoing, and the date by which all existing Sympa groups must be converted to Google Groups is yet to be determined. Full documentation for Google Groups @ CWRU is currently being developed, and will be published well prior to the Sympa's decommission.</p>
 <p>&nbsp;</p>
 
-<div class="well">
-<strong>Communication to End Users</strong>
 
+<h3>Communication to End Users</h3>
+
+<div class="well">
 <p>
 <strong>Publisher:</strong> Tyler Hoffman<br>
 <strong>Date:</strong> Thur. Sep 17, 2015<br>
