Completed webex student guide.

--- a/guides/webex-jabber/webex_qrg_beta_student.html
+++ b/guides/webex-jabber/webex_qrg_beta_student.html
@@ -44,7 +44,7 @@ h3 { padding-top: 20px; }
 <h2>Schedule a Meeting</h2>
 
 <ol>
-<li>Go to <a href="https://cwru.webex.com" target="_blank">cwru-students.webex.com</a>.</li>
+<li>Go to <a href="https://cwru-students.webex.com" target="_blank">cwru-students.webex.com</a>.</li>
 <li>Sign in using your CWRU network ID and password.</li>
 <li>On the left of the page, click <strong>Host a Meeting</strong>.</li>
 </ol>
@@ -104,30 +104,12 @@ h3 { padding-top: 20px; }
 <li>Schedule a meeting and add attendees as normal.</li>
 </ol>
 
-<h3>Allow a Student to Host a Meeting</h3>
-
-<ol>
-<li>Schedule a meeting as you normally would.</li>
-<li>Send student host the meeting link and your "Host Key".</li>
-<li>From the WebEx application, the student should click <strong>Participant</strong> > <strong>Reclaim Host Role...</strong>" and then enter the host key provided by the WebEx account holder.</li>
-<li>The student is now the host and can run the meeting.<br>
-<p>
-	<div class="well well-sm">
-	<ul>
-		<li>Overlapping meetings and concurrent meetings are not allowed. A host key may be used by one person at a time.</li>
-		<li>If the meeting is recorded, the host (faculty member) is the only one who can send the recording out</li>
-	</ul>
-	</div>
-</p>
-</li>
-</ol>
-
 <h3>Start an Ad-hoc Meeting using your 'Personal Room'</h3>
 <p>Most host accounts include a Personal Room (PR). Personal Rooms allow you to hold instant meetings at any time with the same meeting settings and join link.</p>
 <p>The links for Personal Rooms are formatted as follows:
 	<ul>
-		<li>Host's Personal Room Web Page: cwru.webex.com/meet/UserID</li>
-    	<li>Personal Room Join link: cwru.webex.com/join/UserID<br>
+		<li>Host's Personal Room Web Page: cwru-students.webex.com/meet/UserID</li>
+    	<li>Personal Room Join link: cwru-students.webex.com/join/UserID<br>
     	<mark>Note:</mark> This joins you directly into the Personal Room meeting, bypassing the web page.</li>
     </ul>
 </p>
@@ -155,14 +137,14 @@ Hello,
 Join me now in my Personal Room.
 
 JOIN WEBEX MEETING
-https://cwru.webex.com/join/CWRUnetID | 716 221 ###
+https://cwru-students.webex.com/join/CWRUnetID | 716 221 ###
 
 JOIN BY PHONE
 1-650-479-#### Call-in toll number (US/Canada)
 Access code: 716 221 ###
 
 Can't join the meeting? Contact support here:
-https://cwru.webex.com/mc
+https://cwru-students.webex.com/mc
 
 IMPORTANT NOTICE: Please note that this WebEx service allows audio and 
 other information sent during the session to be recorded, which may be
@@ -268,7 +250,7 @@ recorded, discuss your concerns with the host or do not join the session.
 <h3>Attend with computer</h3>
 
 <ol>
-<li>Click the meeting link provided by the organizer (e.g., https://cwru.webex.com/join/CWRUnetID)</li>
+<li>Click the meeting link provided by the organizer (e.g., https://cwru-students.webex.com/join/CWRUnetID)</li>
 <li>If you have not previously attended a WebEx meeting, the system will prompt you to download and install the Meeting Center application.</li>
 <li>The WebEx application will launch and you will join the meeting room.</li>
 <li>Click <strong>Call Using Computer</strong> to connect meeting audio.<br>
@@ -303,7 +285,7 @@ recorded, discuss your concerns with the host or do not join the session.
 <h3>Attend with computer using telephone for audio</h3>
 
 <ol>
-<li>Click the meeting link provided by the organizer (e.g., https://cwru.webex.com/join/CWRUnetID)</li>
+<li>Click the meeting link provided by the organizer (e.g., https://cwru-students.webex.com/join/CWRUnetID)</li>
 <li>If you have not previously attended a WebEx meeting, the system will prompt you to download and install the Meeting Center application.</li>
 <li>The WebEx application will launch and you will join the meeting room.</li>
 <li>A list of meeting attendees as well as video & audio options are shown in upper-right of the application window.</li>
