--- a/scripts/IPT-draft.html
+++ b/scripts/IPT-draft.html
@@ -126,22 +126,30 @@ Field instructor; IPT; Intern placement tracking; MSASS; Password reset; Passwor
       <ul>
           <li>
           <strong>Organization:</strong> msass<br>
-          <strong>Login Name:</strong> *******<br>
-          <strong>Password:</strong> *******<br></li>
+          <strong>Login Name:</strong> GMM4454F<br>
+          <strong>Password:</strong> ipt<br></li>
           <li>
           <strong>Organization:</strong> msass<br>
-          <strong>Login Name:</strong> *******<br>
-          <strong>Password:</strong> *******<br></li>
+          <strong>Login Name:</strong> RIM4149P<br>
+          <strong>Password:</strong> ipt<br></li>
       </ul>
     </li>
     <li>Click the tab marked <strong>Student List</strong>.</li>
     <li>Locate the student by name provided.<br>
-    <mark>list format:</mark> Last, First</li>
-    <li>Click the <strong>name of the student</strong> to open a student detail page.</li>
-    <li>Scroll to the bottom of the student detail page and select the box labeled "Reset Username and Password to Defaults".</li>
-    <li>Click <strong>Save</strong>.</li>
-    <li>The student will receive an email with a link and instructions to set a new password.</li>
-    <li>If you cannot locate the user by name, he or she may need to have a new account created. Refer user to Henrientta Jones (hpj@case.edu) [MSASS].</li>
+    <mark>list format:</mark> Last, First<br>
+    If you cannot locate the user by name, he or she may need to have a new account created. Refer user to Henrientta Jones (hpj@case.edu) [MSASS].</li>
+    <li>Click the <strong>name of the user</strong> to open a detail page.</li>
+    <li>Scroll to the bottom of the detail page.</li>
+    <li>Provide caller with the following default login information: <br>
+      <ul>
+          <li>
+          <strong>Organization:</strong> msass<br>
+          <strong>Login Name:</strong> User Name (eight characters in the following format "AAA1111A")<br>
+          <strong>Password:</strong> ipt<br></li>
+      </ul>
+    <li>Walk the user through signing in with the provided credentials.</li>
+    <li>He or she will be prompted to set a new login name and password.</li>
+    <li>Both the user set and default login credentials will allow a user to sign in to IPT.</li>
     <li>Resolve ticket.</li>
   </ol>
   
@@ -170,16 +178,22 @@ Field instructor; IPT; Intern placement tracking; MSASS; Password reset; Passwor
     </li>
     <li>Click the tab marked <strong>Field Instructor List</strong>.</li>
     <li>Locate the user by name provided.<br>
-    <mark>list format:</mark> Last, First</li>
-    <li>Click the <strong>name of the user</strong> to open a student detail page.</li>
-    <li>Scroll to the bottom of the user detail page and select the box labeled "Reset Username and Password to Defaults".</li>
-    <li>Click <strong>Save</strong>.</li>
-    <li>The field instructor will receive an email with a link and instructions to set a new password.</li>
-    <li>If you cannot locate the user by name, he or she may need to have a new account created. Refer user to Henrientta Jones (hpj@case.edu) [MSASS].</li>
+    <mark>list format:</mark> Last, First<br>
+    If you cannot locate the user by name, he or she may need to have a new account created. Refer user to Henrientta Jones (hpj@case.edu) [MSASS].</li>
+    <li>Click the <strong>name of the user</strong> to open a detail page.</li>
+    <li>Scroll to the bottom of the detail page.</li>
+    <li>Provide caller with the following default login information: <br>
+      <ul>
+          <li>
+          <strong>Organization:</strong> msass<br>
+          <strong>Login Name:</strong> User Name (eight characters in the following format "AAA1111A")<br>
+          <strong>Password:</strong> ipt<br></li>
+      </ul>
+    <li>Walk the user through signing in with the provided credentials.</li>
+    <li>He or she will be prompted to set a new login name and password.</li>
+    <li>Both the user set and default login credentials will allow a user to sign in to IPT.</li>
     <li>Resolve ticket.</li>
   </ol>
-
-
 
 
 <h3 id="url">URL for IPT</h3>
