kb-article de-jankify test

--- a/kb-articles/kb-active_collaboration.html
+++ b/kb-articles/kb-active_collaboration.html
@@ -12,87 +12,58 @@
 		</style>
 
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<title>ITS KBA 91230 ACR</title>
 </head>
 <body>
 <div class="container"><!DOCTYPE html>
 <html lang="en">
-<span><!-- navigation object : Page Name template -->ITS KBA 91230 ACR</span>
-</section>
-</div>
-</div>
-  
-<div class='displayNone'><!-- navigation object : Breadcrumbs hidden template -->
-  <div class="breadcrumb col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <!-- navigation object : Home Link template --><a href='SiteManager?ctfn=publish&amp;fnno=30&amp;chid=144&amp;lang=en&amp;sid=27574'><img src='https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=964684579' alt="Go to Home" /></a><!-- navigation object : Breadcrumbs Template --> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=27574&amp;chid=144&amp;lang=en">ITS</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=41906&amp;chid=144&amp;lang=en">ITS Development</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=67312&amp;chid=144&amp;lang=en">rpretzer</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=67341&amp;chid=144&amp;lang=en">KBA</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=67443&amp;chid=144&amp;lang=en">ITS KBA 91230 ACR</a>
-  </div><!-- .breadcrumb -->
-</div>
-  
-  
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-col">
-    
-    <div class="row"><a id="d.en.200564"></a>
 
-
-<div class='tinyMCE noLine  col-xs-12 col-sm-12 col-md-12 col-lg-12' >
-<a class="anchor" name="200564"></a>
-<h3>Active Collaboration Room</h3>
-  
+<h2>Active Collaboration Room</h2>
 
   
-<p class="p1">Active Collaboration Rooms (ACR) are purpose-built to promote collaborative work between local and remote groups through the use of technology and interior design.</p>
-<p class="p1">CWRU ITS supports one ACR at the Kelvin Smith Library (KSL), room 215.</p>
-<p class="p2"><span class="s1"><a href="http://library.case.edu/ksl/facilities/reserveroom/" target="_blank">Reserve KSL 215</a></span></p>
-</div>
-<a id="d.en.200566"></a>
-
-
-<div class='tinyMCE   col-xs-12 col-sm-12 col-md-12 col-lg-12' >
-<a class="anchor" name="200566"></a>
+<p>Active Collaboration Rooms (ACR) are purpose-built to promote collaborative work between local and remote groups through the use of technology and interior design.</p>
+<p>CWRU ITS supports one ACR at the Kelvin Smith Library (KSL), room 215.</p>
+<a href="http://library.case.edu/ksl/facilities/reserveroom/" target="_blank">Reserve KSL 215</a>
 
   
-
-  
-<p class="p1"><strong>KSL 215, room specifications</strong></p>
-<p class="p1"><strong>Conference table</strong></p>
-<ul class="ul1">
-<li class="li2">Caf&eacute; height</li>
-<li class="li2">Seats six</li>
-<li class="li2">1 TelePresence phone</li>
-<li class="li2">6 power outlets</li>
-<li class="li2">6 audio/visual pucks</li>
-<li class="li2">2 audio cables</li>
-<li class="li2">3 microphones with mute capabilities</li>
-<li class="li2">1 SMARTBoard USB wire (image #4)</li>
+<h3>KSL 215, room specifications</h3>
+<h3>Conference table</h3>
+<ul>
+<li>Caf&eacute; height</li>
+<li>Seats six</li>
+<li>1 TelePresence phone</li>
+<li>6 power outlets</li>
+<li>6 audio/visual pucks</li>
+<li>2 audio cables</li>
+<li>3 microphones with mute capabilities</li>
+<li>1 SMARTBoard USB wire (image #4)</li>
 </ul>
-<p class="p1"><strong>Auxiliary tables (3)</strong></p>
-<ul class="ul1">
-<li class="li2">Caf&eacute; height</li>
-<li class="li2">3 seats</li>
-<li class="li2">3 power outlets</li>
-<li class="li2">1 microphone</li>
+<h3>Auxiliary tables (3)</h3>
+<ul>
+<li>Caf&eacute; height</li>
+<li>3 seats</li>
+<li>3 power outlets</li>
+<li>1 microphone</li>
 </ul>
-<p class="p1"><strong>Lighting</strong></p>
-<ul class="ul1">
-<li class="li2">Light button by door control light (preset 1)</li>
-<li class="li2">Light buttons by projector wall control light (presets 2-4)</li>
+<h3>Lighting</h3>
+<ul>
+<li>Light button by door control light (preset 1)</li>
+<li>Light buttons by projector wall control light (presets 2-4)</li>
 </ul>
-<p class="p1"><strong>Displays</strong></p>
-<ul class="ul1">
-<li class="li2">SMARTboard</li>
-<li class="li2">TelePresence screen</li>
-<li class="li2">Projector</li>
+<h3>Displays</h3>
+<ul>
+<li>SMARTboard</li>
+<li>TelePresence screen</li>
+<li>Projector</li>
 </ul>
 <!-- <iframe src="https://docs.google.com/forms/d/1TlL5J4nLLgHuz4HqhUJRUzRcxdC7UFEX9lsHDT0U2mw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
  -->
-
+</div>
 
 <hr>
 
 <div class="pull-right">
 <p>&copy; 2015, Case Western Reserve University</p>
-</div>
-<div class="clearfix"></div>
-
 </div>
 </body>
 </html>
